--- a/code/themes/abound/css/abound.css
+++ b/code/themes/abound/css/abound.css
@@ -1141,6 +1141,7 @@ input[type="file"]:focus {
     display: block;
     overflow: hidden;
     margin-top: 40px;
+    margin-bottom: 40px;
 }
 .dashboard_boxes .icon_box {
     width: 40%;
