--- a/code/themes/abound/css/abound.css
+++ b/code/themes/abound/css/abound.css
@@ -714,6 +714,7 @@ input[type="file"]:focus {
     background: url(../img/sort2.png) no-repeat right;
     display: block;
     background-size: 12px;
+    padding: 0 10px;
 }
 .desc {
     background: url(../img/sortdown.png) no-repeat right;
@@ -1093,7 +1094,7 @@ input[type="file"]:focus {
     margin-top: 60px;
 }
 .add_new i:hover {color: #521042;
-    background: #fff;}
+                  background: #fff;}
 .add_new a {
     width: 100%;
     height: 100%;
@@ -1673,7 +1674,7 @@ a:hover {
 
 
 .titleNew {font-size: 18px; border-bottom: 1px dashed #ccc; padding-bottom: 0px; text-transform: uppercase; font-weight: 600;
-                letter-spacing: 1px;}
+           letter-spacing: 1px;}
 .prod_orderDetail_row .subTitle,  .dynamic_content  .subTitle { font-size: 18px; margin:0;}
 .orderDetail .titleNew a {
     display: inline-block;
@@ -1831,14 +1832,14 @@ hr {
 .final-productList .finalDetail .table { width: 38%; margin-bottom: 0;}
 .final-productList .finalDetail .table td {vertical-align: middle;padding: 2px 0;border: 0;}
 .final-productList .finalDetail .table td input[type="text"] {
-                                                                  width: 70px !important;
-                                                                  height: 20px !important;
-                                                                  padding: 2px 5px;
-                                                                  margin: 0;
-                                                                  box-shadow: none;
-                                                                  border: 1px solid #ccc;
-                                                                  border-radius: 0;
-                                                                  }
+    width: 70px !important;
+    height: 20px !important;
+    padding: 2px 5px;
+    margin: 0;
+    box-shadow: none;
+    border: 1px solid #ccc;
+    border-radius: 0;
+}
 .finalDetail .status_top {
     position: absolute;
     top: 0;
@@ -1894,17 +1895,17 @@ hr {
     text-align: right;
 }
 .staticItem {
-   letter-spacing: 2px;
-   color: #005696;
-   font-size: 16px;
-   font-weight: 600;
-   background: #C7C7C7;
-   padding: 0;
-   border: 0;
-   display: block;
-   text-transform: uppercase;
-   text-align: center;
-   line-height: 40px;
+    letter-spacing: 2px;
+    color: #005696;
+    font-size: 16px;
+    font-weight: 600;
+    background: #C7C7C7;
+    padding: 0;
+    border: 0;
+    display: block;
+    text-transform: uppercase;
+    text-align: center;
+    line-height: 40px;
 }
 
 .errorSummary, .flash-error {
@@ -2000,30 +2001,30 @@ hr {
     padding: 0;
 }
 .label-success {    background-color: #468847;
-    color: white !important;
-    background-color: #468847;
-    padding: 10px;
-    margin: 10px 0px !important;
-    font-size: 11.844px;
-    font-weight: bold;
-    line-height: 14px;
-    color: #fff;
-    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
-    white-space: nowrap;
-    vertical-align: baseline;
-    border-radius: 4px;
-    width: 515px;
+                    color: white !important;
+                    background-color: #468847;
+                    padding: 10px;
+                    margin: 10px 0px !important;
+                    font-size: 11.844px;
+                    font-weight: bold;
+                    line-height: 14px;
+                    color: #fff;
+                    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+                    white-space: nowrap;
+                    vertical-align: baseline;
+                    border-radius: 4px;
+                    width: 515px;
 }
 
 .activebutton {
-  width: auto;
-  float: right;
-  padding: 5px 5px;
-  border: 1px solid #324287;
-  color: #FFFFFF;
-  text-transform: uppercase;
-  border-radius: 4px !important;
-  background: #521042;
-  border-color: #521042 !important;
-  margin-left: 5px;
+    width: auto;
+    float: right;
+    padding: 5px 5px;
+    border: 1px solid #324287;
+    color: #FFFFFF;
+    text-transform: uppercase;
+    border-radius: 4px !important;
+    background: #521042;
+    border-color: #521042 !important;
+    margin-left: 5px;
 }
