bug issue fixed

--- a/code/themes/abound/css/abound.css
+++ b/code/themes/abound/css/abound.css
@@ -12,6 +12,19 @@ bo {
     font-weight: 600;
     line-height: 25px;  
 }
+.backBtn_new1 {
+    display: block;
+    width: auto;
+    float: right;
+    padding: 5px 5px;
+    border: 1px solid #521042;
+    color: #FFFFFF;
+    text-transform: uppercase;
+    border-radius: 4px !important;
+    background: #521042;
+    border-color: #521042 !important;
+    margin-left: 5px;
+}
 #aiotree_control .aiotree_collapse,
 #aiotree_control .aiotree_expand {
     text-transform: uppercase;
@@ -563,21 +576,22 @@ footer {
     filter: progid:dximagetransform.microsoft.gradient(enabled=false);
 }
 #login-form label {
-    width: 10%;
+    width: 15%;
     float: left;
     font-weight: bold;
-    color: #fff;
-    background: #521042;
+    color: #F7F7F7;
+    background: #797979;
     font-size: 20px;
-    text-align: center;
     box-sizing: border-box;
     margin: 20px 0;
     height: 45px;
-    padding: 14px 10px;
+    padding: 0px;
     display: block;
+    line-height: 45px;
+    text-align: center;
 }
 #login-form input {
-    width: 90%;
+    width: 85%;
     float: left;
     box-sizing: border-box;
     margin: 20px 0;
@@ -598,7 +612,7 @@ footer {
 }
 #login-form .buttons .btn {
     width: 100% !important;
-    background: #521042;
+    background: #317E34;
     padding: 10px;
     margin: 0 !important;
 }
@@ -643,6 +657,42 @@ footer {
 }
 .pager ul.yiiPager li {
     float: left;
+}
+.menuUser {
+    overflow: hidden;
+    background: #EDF4ED;
+    padding: 10px 0;
+}
+.menuUser span {
+    display: block;
+    width: 35px;
+    height: 35px;
+    border: 1px solid #D6D6D6;
+    border-radius: 50%;
+    text-align: center;
+    line-height: 35px;
+    font-size: 21px;
+    margin: 0 10px;
+    float: left;
+    color: #FAC046;
+    background: #fff;
+}
+.menuUser h3 {
+    display: block;
+    font-weight: 300;
+    margin: 0;
+    line-height: 35px;
+    font-size: 14px;
+    float: left;
+    width: 110px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+}
+
+.grid-view .table thead th {
+    vertical-align: middle !important;
 }
 .grid-view .pager {
     text-align: left;
@@ -767,11 +817,12 @@ input[type="file"]:focus {
     }
 }
 .logo_contain {
-    background-color: #fff;
-    height: 46px;
+    background-color: #FFFFFF;
+    height: 45px;
     margin: 0;
     padding: 0;
     overflow: hidden;
+    border-bottom: 1px solid #4C904E;
 }
 .logo_side {
     background: url(../img/logo.png) no-repeat right;
@@ -785,9 +836,9 @@ input[type="file"]:focus {
 .left_sidemenu .item-test a {
     font-size: 12px;
     padding: 10px 15px;
-    color: #848484;
-    border-bottom: 1px solid #D8D8D8;
-    border-top: 1px solid #E8E8E8;
+    color: #3A3A3A;
+    border-bottom: 1px solid rgba(76, 144, 78, 0.4);
+    border-top: 1px solid rgba(255, 255, 255, 0.73);
     letter-spacing: 1px;
     text-transform: uppercase;
 }
@@ -799,8 +850,8 @@ input[type="file"]:focus {
     background: url(../img/right-arrow26.png) no-repeat right;
     display: block;
     background-size: 12px;
-    background-color: #521042;
-    color: #EAEAEA;
+    background-color: #D1E2D1;
+    color: #519354;
     background-position: 95%;
 }
 .portlet-content .form form {
@@ -947,17 +998,18 @@ input[type="file"]:focus {
     overflow-y: auto;
 }
 .header_top {
-    background: #521042;
-    height:45px;
+    background: #FFFFFF;
+    height: 45px;
     position: fixed;
     width: 100%;
     z-index: 999;
     left: 0;
     top: 0;
+    border-bottom: 1px solid #4C904E;
 }
 .header_top span.title {
     margin-left: 15%;
-    color: #fff;
+    color: #4C4C4C;
     font-size: 14px;
     line-height: 24px;
     text-align: left;
@@ -1429,9 +1481,10 @@ a:hover {
 .breadcrumb {
     padding: 3px 0 3px 16%;
     border-radius: 0;
-    top: 45px;
+    top: 46px;
     position: absolute;
     width: 100%;
+    background-color: #EDF4ED;
 }
 .tab_list {
     margin: 0;
@@ -1453,23 +1506,14 @@ a:hover {
     margin-right: 0px;
 }
 .tab_list li a {
-    color: rgba(255, 255, 255, 0.86);
-    background: #F5F5F5;
+    color: #4C904E;
     padding: 3px 10px;
     transition: all 0.3s;
     text-align: center;
     font-size: 11px;
     text-transform: uppercase;
     display: block;
-    background-color: #521042;
-    background-image: -moz-linear-gradient(top, #F1F1F1, #DBDBDB);
-    background-image: linear-gradient(to bottom, #521042, #521042);
-    background-image: linear-gradient(to bottom, #521042, #521042);
-    background-image: -o-linear-gradient(top, #F1F1F1, #DBDBDB);
-    background-image: linear-gradient(to bottom, #521042, #521042);
-    background-repeat: repeat-x;
-    filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ffF1F1F1', endColorstr='#ffDBDBDB', GradientType=0);
-    -webkit-box-shadow: linear-gradient(to bottom, #521042, #521042);
+    background-color: rgba(76, 144, 78, 0.15);
     text-decoration: none;
     font-weight: 400;
     box-sizing: border-box;
@@ -1478,22 +1522,30 @@ a:hover {
 }
 .tab_list li a:hover,
 .tab_list li a.active {
-    /* background: #CACACA; */
-    /* color: #464646; */
-    /* background-color: #F1F1F1; */
-    background-image: -moz-linear-gradient(top, #F1F1F1, #DBDBDB);
-    /* background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#DBDBDB), to(#DBDBDB)); */
-    /* background-image: -webkit-linear-gradient(top, #F1F1F1, #DBDBDB); */
-    background-image: -o-linear-gradient(top, #F1F1F1, #DBDBDB);
-    /* background-image: linear-gradient(to bottom, #E0E0E0, #A7A7A7); */
-    /* background-repeat: repeat-x; */
-    filter: progid:dximagetransform.microsoft.gradient(startColorstr='#ffF1F1F1', endColorstr='#ffDBDBDB', GradientType=0);
-    /* -webkit-box-shadow: #F9F9F9 0 1px 0 inset; */
-    /* border: 1px solid #DDDDDD; */
-    /* border-radius: 3px; */
-    /* box-shadow: #F9F9F9 0 1px 0 inset; */
-    /* text-decoration: none; */
-    background: rgba(255,255,255,0.10);
+    background-color: rgba(76, 144, 78, 1);
+    color:#fff !important;
+}
+.dashIcon_head {
+    
+display: block;
+    
+width: 80px;
+    
+height: 80px;
+    
+text-align: center;
+    
+margin: 0 auto 10px;
+    
+border-radius: 50%;
+    
+line-height: 80px;
+    
+font-size: 40px;
+    
+color: #fff;
+    
+background: #317E34;
 }
 .check_new_span {
     position: absolute;
@@ -1815,7 +1867,7 @@ hr {
     letter-spacing: 1px;
 }
 .dashboard-table .right_date { float: right; width: 65%;background: #ccc;height: 45px; text-align: right;}
-.dashboard-table .right_date input[type="text"] { float: left;margin: 7px 0;background-color: #FDFDFD !important;border: 2px solid #C1C1C1; position: relative; background: url(../img/clock.png) no-repeat right;background-position: 95%;background-size: 20px;}
+.dashboard-table .right_date input[type="text"] { cursor:pointer;float: left;margin: 7px 0;background-color: #FDFDFD !important;border: 2px solid #C1C1C1; position: relative; background: url(../img/clock.png) no-repeat right;background-position: 95%;background-size: 20px;}
 .dashboard-table .right_date input[type="submit"] {
     float: right;
     display: block;
@@ -2040,6 +2092,11 @@ hr {
                     vertical-align: baseline;
                     border-radius: 4px;
                     width: 515px;
+}
+#leftside_bar {
+    
+background: #EDF4ED;
+border-right: 1px solid #4C904E;
 }
 
 .activebutton {
