--- a/code/themes/abound/css/abound.css
+++ b/code/themes/abound/css/abound.css
@@ -811,7 +811,7 @@ input[type="file"]:focus {
     outline: none;
 }
 .sort-link {
-    background: url(../img/sort2.png) no-repeat right;
+    //background: url(../img/sort2.png) no-repeat right;
     display: block;
     background-size: 12px;
     padding: 0 10px;
