--- a/code/themes/abound/css/abound.css
+++ b/code/themes/abound/css/abound.css
@@ -2264,3 +2264,7 @@ nav.vertical li.ex1:hover > ul{
 #purchase-header-grid .child {
     display:none;
 }
+
+#purchase-header-grid .unsorted {
+    display:table-row;
+}
