--- a/code/themes/abound/css/abound.css
+++ b/code/themes/abound/css/abound.css
@@ -2261,10 +2261,10 @@ nav.vertical li.ex1:hover > ul{
     /*transform: translateX(0px);*/
 }
 
-#purchase-header-grid .child {
+#warehouse-item-grid .child {
     display:none;
 }
 
-#purchase-header-grid .unsorted {
+#warehouse-item-grid .unsorted {
     display:table-row;
 }
